feat: og images

--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Home - Nathanael Ferry P</title>
 
-        <!-- Favicon -->
-        <link rel="icon" href="./img/favicon_io/favicon-32x32.png" type="image/x-icon" />
-
         <!-- Meta description -->
         <meta
             name="description"
             content="Nathanael Ferry Pratama is a dedicated undergraduate student pursuing a Bachelor's degree in Informatics at STMIK LIKMI. He excels in programming languages, software development, and database management, honing practical problem-solving and critical thinking skills through a comprehensive curriculum. Nathanael has gained valuable experience as an Intern Backend Developer at PT 4Nesia Digital Solution, where he contributed to developing backends for applications like Brainys and Oasys using Laravel. His proficiency extends to web development and software engineering, evident from his roles as a Freelancer and previous positions, where he has designed, maintained, and optimized websites and applications. Nathanael's commitment to excellence is reflected in his active involvement in student organizations and event management roles, showcasing his leadership and organizational skills."
         />
+        <meta name="author" content="Nathanael Ferry Pratama" />
+        <meta name="keywords" content="portfolio, web development, software engineering, informatics, laravel, backend developer" />
+        <meta name="robots" content="index, follow" />
+
+        <meta property="og:description" content="Nathanael Ferry Pratama is a dedicated undergraduate student pursuing a Bachelor's degree in Informatics at STMIK LIKMI. He excels in programming languages, software development, and database management, honing practical problem-solving and critical thinking skills through a comprehensive curriculum. Nathanael has gained valuable experience as an Intern Backend Developer at PT 4Nesia Digital Solution, where he contributed to developing backends for applications like Brainys and Oasys using Laravel. His proficiency extends to web development and software engineering, evident from his roles as a Freelancer and previous positions, where he has designed, maintained, and optimized websites and applications. Nathanael's commitment to excellence is reflected in his active involvement in student organizations and event management roles, showcasing his leadership and organizational skills." />
+        <meta property="og:image" content="./img/NTHANFP.png" />
+        <meta property="og:url" content="https://nthanfp.github.io/me/" />
+        <meta property="og:type" content="website" />
+
+        <!-- Favicon -->
+        <link rel="icon" href="./img/favicon_io/favicon-32x32.png" type="image/x-icon" />
 
         <!-- CSS only -->
         <link href="https://bootswatch.com/5/darkly/bootstrap.css" rel="stylesheet" />
@@ -122,10 +130,18 @@
                 <footer class="d-flex flex-wrap justify-content-between align-items-center">
                     <p class="col-md-4 mb-0 text-muted">Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/nthanfp/" class="text-white fw-bold">NTHANFP</a></p>
                     <ul class="nav col-md-4 justify-content-end">
-                        <li class="nav-item"><a target="_blank" href="https://www.instagram.com/nthanfp/" class="nav-link px-2 text-muted"><i class="bi bi-instagram"></i></a></li>
-                        <li class="nav-item"><a target="_blank" href="https://www.linkedin.com/in/nathanael-ferry-pratama/" class="nav-link px-2 text-muted"><i class="bi bi-linkedin"></i></a></li>
-                        <li class="nav-item"><a target="_blank" href="https://github.com/nthanfp" class="nav-link px-2 text-muted"><i class="bi bi-github"></i></a></li>
-                        <li class="nav-item"><a target="_blank" href="https://medium.com/@nthanfp" class="nav-link px-2 text-muted"><i class="bi bi-medium"></i></a></li>
+                        <li class="nav-item">
+                            <a target="_blank" href="https://www.instagram.com/nthanfp/" class="nav-link px-2 text-muted"><i class="bi bi-instagram"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a target="_blank" href="https://www.linkedin.com/in/nathanael-ferry-pratama/" class="nav-link px-2 text-muted"><i class="bi bi-linkedin"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a target="_blank" href="https://github.com/nthanfp" class="nav-link px-2 text-muted"><i class="bi bi-github"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a target="_blank" href="https://medium.com/@nthanfp" class="nav-link px-2 text-muted"><i class="bi bi-medium"></i></a>
+                        </li>
                     </ul>
                 </footer>
             </div>
