--- a/profile.html
+++ b/profile.html
@@ -20,15 +20,20 @@
             name="description"
             content="Nathanael Ferry Pratama is a dedicated undergraduate student pursuing a Bachelor's degree in Informatics at STMIK LIKMI. He excels in programming languages, software development, and database management, honing practical problem-solving and critical thinking skills through a comprehensive curriculum. Nathanael has gained valuable experience as an Intern Backend Developer at PT 4Nesia Digital Solution, where he contributed to developing backends for applications like Brainys and Oasys using Laravel. His proficiency extends to web development and software engineering, evident from his roles as a Freelancer and previous positions, where he has designed, maintained, and optimized websites and applications. Nathanael's commitment to excellence is reflected in his active involvement in student organizations and event management roles, showcasing his leadership and organizational skills."
         />
+        <meta name="author" content="Nathanael Ferry Pratama" />
+        <meta name="keywords" content="portfolio, web development, software engineering, informatics, laravel, backend developer" />
+        <meta name="robots" content="index, follow" />
+
+        <meta
+            property="og:description"
+            content="Nathanael Ferry Pratama is a dedicated undergraduate student pursuing a Bachelor's degree in Informatics at STMIK LIKMI. He excels in programming languages, software development, and database management, honing practical problem-solving and critical thinking skills through a comprehensive curriculum. Nathanael has gained valuable experience as an Intern Backend Developer at PT 4Nesia Digital Solution, where he contributed to developing backends for applications like Brainys and Oasys using Laravel. His proficiency extends to web development and software engineering, evident from his roles as a Freelancer and previous positions, where he has designed, maintained, and optimized websites and applications. Nathanael's commitment to excellence is reflected in his active involvement in student organizations and event management roles, showcasing his leadership and organizational skills."
+        />
+        <meta property="og:image" content="./img/NTHANFP.png" />
+        <meta property="og:url" content="https://nthanfp.github.io/me/" />
+        <meta property="og:type" content="website" />
 
         <!-- Favicon -->
         <link rel="icon" href="./img/favicon_io/favicon-32x32.png" type="image/x-icon" />
-
-        <!-- Meta description -->
-        <meta
-            name="description"
-            content="Nathanael Ferry Pratama is a dedicated undergraduate student pursuing a Bachelor's degree in Informatics at STMIK LIKMI. He excels in programming languages, software development, and database management, honing practical problem-solving and critical thinking skills through a comprehensive curriculum. Nathanael has gained valuable experience as an Intern Backend Developer at PT 4Nesia Digital Solution, where he contributed to developing backends for applications like Brainys and Oasys using Laravel. His proficiency extends to web development and software engineering, evident from his roles as a Freelancer and previous positions, where he has designed, maintained, and optimized websites and applications. Nathanael's commitment to excellence is reflected in his active involvement in student organizations and event management roles, showcasing his leadership and organizational skills."
-        />
 
         <!-- CSS only -->
         <link href="https://bootswatch.com/5/darkly/bootstrap.css" rel="stylesheet" />
@@ -47,7 +52,6 @@
     </head>
 
     <body id="home">
-
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
             <div class="container">
